changed name class,allegedly wrote the code himself

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,7 +5,7 @@ body {
     color: white;
 }
 
-.cta {
+.link {
     color: Aquamarine;
     font-size: 16px;
 }
@@ -25,4 +25,4 @@ p {
 
 .footer {
     text-align: right;
-} 
+}
